# Flappy-Bird

./: CMakeLists.txt  gradle.properties
app/: build.gradle
app/src/main/cpp/: CMakeLists.txt  main.c
build-windows/: CMakeCache.txt  Makefile  cmake_install.cmake
src/: main.c
